# gitscribe

./: .gitignore  Cargo.toml  GEMINI.md  README.md  manual_full_prompt.md
.github/: .commitlintrc.json  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  README.md  SETUP.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: README.md  ci.yml  coverage.yml  dependency-update.yml  lint-pr.yml  playwright.yml  release.yml
apps/context_gui/: package-lock.json  package.json  playwright.config.ts
apps/context_gui/playwright-report/: index.html
apps/context_gui/src/: App.tsx
apps/context_gui/src-tauri/: Cargo.toml  tauri.conf.json
apps/context_gui/src-tauri/src/: lib.rs  main.rs
apps/context_gui/tests/: app.spec.ts
apps/gitscribe/: package-lock.json  package.json  playwright.config.ts
apps/gitscribe/playwright-report/: index.html
apps/gitscribe/src/: App.tsx  SettingsModal.tsx
apps/gitscribe/src-tauri/: Cargo.toml  tauri.conf.json
apps/gitscribe/src-tauri/src/: lib.rs
apps/gitscribe/tests/: app.spec.ts
crates/context_cli/: Cargo.toml
crates/context_core/: Cargo.toml
crates/context_core/src/: jira.rs  lib.rs
crates/gitscribe_cli/: Cargo.toml
crates/gitscribe_core/: Cargo.toml
docs/: USER_GUIDE.md
docs/ai/: plan-001-high-level.md  plan-002-implementation-part1.md  plan-003-workflow-integration.md  plan-004-tauri-gui.md  plan-005-ux.md  plan-006-jira-integration.md  plan-007-installer.md  release-notes-prompt.md
docs/research/: release-notes-best-practices-research.md
rust-context-gen/: Cargo.toml
rust-context-gen/src/: main.rs
src/: generate_context.py
(+4 files in other folders)
