[package]
name = "context_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
futures = "0.3.31"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["full", "macros"] }
