[package]
name = "context_gui"
version = "0.1.0"
description = "A Tauri App for Release Context Generation"
authors = ["you"]
edition = "2021"

[lib]
name = "context_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
context_core = { path = "../../../crates/context_core" }
tauri-plugin-dialog = "2.4.2"
