[package]
name = "gitscribe"
version = "0.1.0"
description = "A Tauri App for Release Context Generation"
authors = ["you"]
edition = "2021"

[lib]
name = "gitscribe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
gitscribe_core = { path = "../../../crates/gitscribe_core" }
tauri-plugin-dialog = "2.4.2"
tauri-plugin-fs = "2.4.4"
open = "5.3.3"
tauri-plugin-store = "2.4.1"
